--- a/search.html
+++ b/search.html
@@ -596,7 +596,7 @@
             finalObj += "<li><a href=search.html?search=" + holdUsing + "#filter=" + filterCategory + "#page=" + num + ">";
             finalObj += "Previous Page</a></li>"
           }
-          alert("The queryLimit: " + queryLimit + "  lastResult: " + lastResult + "  maxResults: " + maxResults);
+          // alert("The queryLimit: " + queryLimit + "  lastResult: " + lastResult + "  maxResults: " + maxResults);
           if (queryLimit == lastResult) //Next page button
           {
             // alert(pageNumber); //Debugging
