Hyperlink Thread Search and Fix Page Glitch

--- a/contactDashboard.html
+++ b/contactDashboard.html
@@ -469,7 +469,7 @@
             </ul>
         </div>
 
-          <div style = "float: right; width: 86%">
+          <div>
             <h1 id="filterName" >filter</h1>
 
             <div id="threads">
